intent to detall

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SingUpActiviity" />
-        <activity android:name=".ShowServiceActivity"></activity>
+        <activity android:name=".ShowServiceActivity" />
+        <activity android:name=".DetallActivity"></activity>
     </application>
 
 </manifest>
